[gd_scene load_steps=2 format=3 uid="uid://bvx8ywqm2n5f6"]

[ext_resource type="Script" path="res://scenes/release-manager/export-path-settings-dialog.gd" id="1_1a1a1"]

[node name="ExportPathSettingsDialog" type="Window"]
title = "Export Path Settings"
initial_position = 2
size = Vector2i(600, 500)
script = ExtResource("1_1a1a1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlatformLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Platform: Windows Desktop"
horizontal_alignment = 1

[node name="RootPathLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Root Path: C:/exports"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Path Segments:"

[node name="SegmentsScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SegmentsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SegmentsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="AddButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddVersionButton" type="Button" parent="MarginContainer/VBoxContainer/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {version}"

[node name="AddPlatformButton" type="Button" parent="MarginContainer/VBoxContainer/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {platform}"

[node name="AddDateButton" type="Button" parent="MarginContainer/VBoxContainer/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {date}"

[node name="AddCustomButton" type="Button" parent="MarginContainer/VBoxContainer/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ Custom Folder"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Preview: C:/exports/v0.12.2/Windows Desktop"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Save"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButtonsContainer/AddVersionButton" to="." method="_onAddVersionPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButtonsContainer/AddPlatformButton" to="." method="_onAddPlatformPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButtonsContainer/AddDateButton" to="." method="_onAddDatePressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButtonsContainer/AddCustomButton" to="." method="_onAddCustomPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_onCancelPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_onSavePressed"]
[connection signal="close_requested" from="." to="." method="_onCloseRequested"]
